# ChatApp-Qt

./: .gitignore  README.md
ChatApp/: CMakeLists.txt  Main.qml  chatclient.cpp  chatclient.h  main.cpp
ChatServer/: CMakeLists.txt  main.cpp  server.cpp  server.h
